# Leaf-Chat

./: CMakeLists.txt  README.md  main.c
debian/Leaf-Chat/DEBIAN/: control
debian/Leaf-Chat/opt/Leaf-Chat/: leaf-chat
debian/Leaf-Chat/usr/share/applications/: leaf-chat.desktop
debian/Leaf-Chat/usr/share/metainfo/: leaf-chat.metainfo.xml
